--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
+/* Temel App container'ı */
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Sol tarafa dayalı içerik alanı */
+.content {
+  background: linear-gradient(to right, rgb(0, 29, 127), rgba(1, 156, 236, 0.33));
+  color: white;
+  padding: 20px;
+  width: 40%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+/* Input alanı için stil */
+input {
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 90%;
+  background: rgba(0, 29, 127, 0.18);
   color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+/* Güncelleme butonu */
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #61dafb;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 93%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: #21a1f1;
 }
+
+/* Gereksiz olan logoyla ilgili animasyonlar ve medya sorguları kaldırıldı */
